--- a/pom.xml
+++ b/pom.xml
@@ -38,17 +38,17 @@
 
   <modules>
     <module>android</module>
-    <module>archetype</module>
+<!--<module>archetype</module>-->
     <module>core</module>
-    <module>html</module>
+<!--<module>html</module>-->
     <module>java-base</module>
     <module>java-lwjgl</module>
-    <module>java-lwjgl2</module>
+<!--<module>java-lwjgl2</module>
     <module>java-swt</module>
-    <module>jbox2d</module>
+    <module>jbox2d</module>-->
     <module>robovm</module>
     <module>scene</module>
-    <module>webgl</module>
+<!--<module>webgl</module>-->
   </modules>
 
   <properties>
